# Re-Imbursement-Management

./: README.md  confirm_users.py  create_test_user.py  main.py  pyproject.toml  test_api.py  test_out.txt  test_results.json
app/: main.py
app/api/: dependencies.py
app/api/routes/: approvals.py  auth.py  expenses.py  users.py
app/core/: config.py  security.py
app/schemas/: auth.py  expenses.py
app/services/: currency.py  ocr.py  workflow.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: AdminDashboard.jsx  Auth.jsx  Dashboard.jsx  EmployeeDashboard.jsx  Login.jsx  ManagerDashboard.jsx  Register.jsx  SubmitExpense.jsx
frontend/src/services/: api.js
